# epstein_crawler_docs

./: .env.example  .gitignore  DOCKER_HUB_README.md  Dockerfile  LEGAL_NOTICE  LICENSE  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  epstein_urls.json  main.py  pyproject.toml  routes.http
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml  test.yml
src/: __init__.py  api.py  app.py  config.py  downloader.py  logging_config.py  scraper.py
src/rag/: __init__.py  embeddings.py  llm.py  parser.py  store.py  sync.py
tests/: conftest.py  test_api.py  test_app.py  test_downloader.py  test_scraper.py
