[project]
name = "epstein-crawler-docs"
version = "1.0.1"
description = "A specialized web scraper for the U.S. Department of Justice Epstein Files library, featuring advanced bot detection evasion, Xvfb support for headless environments, and automated PDF collection."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
