[project]
name = "epstein-crawler-docs"
version = "1.0.5"
description = "A specialized web scraper for the U.S. Department of Justice Epstein Files library, featuring advanced bot detection evasion, Xvfb support for headless environments, and automated PDF collection."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.5",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "openai>=1.109.1",
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "playwright>=1.58.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
